A jar and a run.bat, an Options dialog, and a grey Play
No more Brodgar.exe: the folder a player unzips is launcher.jar, run.bat --
which starts it on runtime/bin/javaw.exe beside it, the console gone at once
-- and the jlink runtime; jpackage goes, the version travels in the jar's
manifest, and the launcher's folder is the one launcher.jar is in (a
development run names it with -Dlauncher.home). The big button is greyed out
while the channel has nothing published: GitHub answering "nothing" is
NoReleaseException, apart from a network failure, which still offers the
installed client, and from a failed download with nothing installed, which
offers Retry. Options... opens a dialog of what shapes the game's command
line, each setting under a plain name with a line saying what the parameter
does -- the memory the game is given and whether it is all reserved at start,
how memory is cleaned up (concurrently, or in short stops), whether Windows
may scale the window, which network address to try first, extra Java options,
the resource cache address, the update check -- over the command it all
makes; OK writes them in place, Cancel leaves them. The window is one grid:
Play beside the status and the bar, Options in Play's column under them.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>